--- a/CSS/baby-maker.css
+++ b/CSS/baby-maker.css
@@ -66,7 +66,7 @@
     margin: 0;
 }
 
-.finalizeCreate, .neverMind {
+.finalizeCreate, .neverMind, .ok-baby {
     appearance: none;
     background: #0099ff;
     background-image: -webkit-linear-gradient(top, #0099ff, #006fb0);
@@ -98,7 +98,7 @@
     display: none;
 }
 
-.finalizeCreate:hover, .neverMind:hover {
+.finalizeCreate:hover, .neverMind:hover, .ok-baby:hover {
     background: #006fb0;
     background-image: -webkit-linear-gradient(top, #006fb0, #0099ff);
     background-image: -moz-linear-gradient(top, #006fb0, #0099ff);
@@ -109,7 +109,7 @@
     transform: translateY(-5px);
 }
 
-.finalizeCreate:active, .neverMind:active {
+.finalizeCreate:active, .neverMind:active, .ok-baby:active {
     transform: translateY(5px);
 }
 
