--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,13 +1,12 @@
 .main-title {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
     font-size: 50px;
-    letter-spacing: -2px;
-    color: #FFFFFF;
-    font-weight: 700;
+    color: #E7DECC;
+    font-weight: 350;
     text-decoration: none;
     font-style: normal;
     font-variant: small-caps;
-    left: 15%;
+    left: 10%;
     position: relative;
     overflow-wrap: break-word;
     word-break: break-word;
@@ -16,31 +15,34 @@
     margin: 0;
 }
 
+
 .fun-and-free {
     display: inline-block;
-    font-family: Tahoma, Geneva, sans-serif;
-    font-size: 40px;
-    color: white;
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-size: 35px;
+    color: #E7DECC;
     font-weight: 400;
     text-decoration: none solid rgb(68, 68, 68);
     font-style: normal;
     font-variant: normal;
     text-transform: none;
-    left: 15%;
+    left: 10%;
     position: relative;
     max-width: 600px;
     overflow-wrap: break-word;
     word-break: break-word;
 }
 
+
 .fun-and-free-bold {
     font-weight: bolder;
     background: #CF0202;
-    background: linear-gradient(to right, #CF0202 20%, #CF8D42 100%);
+    background: linear-gradient(to right, #CF0202 20%, #ff8800 100%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
 
 .box {
     background-color: rgb(28, 26, 26);
@@ -52,78 +54,75 @@
     text-align: center;
 }
 
+
 .activities-about {
-    font-family: Georgia, serif;
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
     font-size: 25px;
     letter-spacing: -2px;
-    color: white;
+    color: #E7DECC;
     font-weight: 700;
     font-variant: small-caps;
 }
 
+
 .activities-to-do > p {
-    color: white;
-    font-family: Georgia, serif;
+    color: #E7DECC;
+    font-family: sans-serif;
     font-size: 15px;
     letter-spacing: -1px;
     font-weight: 400;
     padding: 3px;
 }
 
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Koulen&family=Lato&family=Nunito&family=Playfair+Display:ital@1&family=Prata&family=Raleway:ital,wght@1,100&family=Roboto&family=Roboto+Condensed&family=Teko&display=swap');
+
+
 .activity-btn {
-    background: #00a6ff;
-    background-image: -webkit-linear-gradient(top, #00a6ff, #0068a8);
-    background-image: -moz-linear-gradient(top, #00a6ff, #0068a8);
-    background-image: -ms-linear-gradient(top, #00a6ff, #0068a8);
-    background-image: -o-linear-gradient(top, #00a6ff, #0068a8);
-    background-image: linear-gradient(to bottom, #00a6ff, #0068a8);
-    -webkit-border-radius: 11;
-    -moz-border-radius: 11;
-    border-radius: 11px;
-    text-shadow: 2px 2px 9px #000000;
-    -webkit-box-shadow: 1px 1px 10px #000000;
-    -moz-box-shadow: 1px 1px 10px #000000;
-    box-shadow: 1px 1px 10px #000000;
-    font-family: Arial;
-    color: #ffffff;
-    font-size: 15px;
-    padding: 10px 20px 10px 20px;
-    border: solid #000000 3px;
-    text-decoration: none;
-    width: fit-content;
-    height: fit-content;
-    margin: auto;
-    transition: box-shadow .15s, transform .15s;
+    font-family: sans-serif;
+    font-weight: 0;
+    font-size: 14px;
+    color: #E7DECC;
+    background: linear-gradient(177deg, #42b7ff 0%, #0096c7 100%);
+    padding: 10px 30px;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    transition: 250ms;
+    transform: translateY(0);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    cursor: pointer;
     position: relative;
-    left: 17%;
+    text-decoration: none;
+    left: 12%;
 }
-  
+ 
 .activity-btn:hover {
-    background: #0068a8;
-    background-image: -webkit-linear-gradient(top, #0068a8, #00a6ff);
-    background-image: -moz-linear-gradient(top, #0068a8, #00a6ff);
-    background-image: -ms-linear-gradient(top, #0068a8, #00a6ff);
-    background-image: -o-linear-gradient(top, #0068a8, #00a6ff);
-    background-image: linear-gradient(to bottom, #0068a8, #00a6ff);
+    background: linear-gradient(177deg, #0096c7 0%, #42b7ff 100%);
     transform: translateY(-5px);
     text-decoration: none;
     cursor: pointer;
 }
 
+
 .activity-btn:active {
     transform: translateY(5px);
 }
 
+
 .activities-about-selector {
     display: flex;
-    max-width: 600px;
+    max-width: 501px;
     height: 100px;
-    background-color: rgb(28, 26, 26);
+    background-color: rgb(11, 11, 11);
     position: relative;
-    left: 15%;
-    border: 5px solid black;
-    color: white;
+    left: 10%;
+    border: 5px dashed rgb(0, 0, 0);
+    color: #E7DECC;
+    border-radius: 5px;
 }
+
 
 .activities-about-text {
     text-align: center;
@@ -132,8 +131,8 @@
     margin: auto;
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     font-size: 30px;
-    color: #FFFFFF;
-    font-weight: 700;
+    color: #E7DECC;
+    font-weight: 300;
     text-decoration: none solid rgb(68, 68, 68);
     font-style: normal;
     font-variant: normal;
@@ -141,27 +140,32 @@
     transition: opacity .5s ease-in-out;
 }
 
+
 .activities-btn-left {
     position: relative;
     height: 100px;
-    background-color: rgb(28, 26, 26);
+    background-color: rgb(11, 11, 11);
     border: none;
-    color: white;
+    color: #E7DECC;
     cursor: pointer;
     font-size: x-large;
     flex-grow: 1;
+    padding: 10px;
 }
+
 
 .activities-btn-right {
     position: relative;
     height: 100px;
-    background-color: rgb(28, 26, 26);
+    background-color: rgb(11, 11, 11);
     border: none;
-    color: white;
+    color: #E7DECC;
     cursor: pointer;
     font-size: x-large;
     flex-grow: 1;
+    padding: 10px;
 }
+
 
 .main-img {
     position: relative;
@@ -169,7 +173,9 @@
     top: 50%;
 }
 
+
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Koulen&family=Lato&family=Nunito&family=Playfair+Display:ital@1&family=Prata&family=Raleway:ital,wght@1,100&family=Roboto&family=Roboto+Condensed&family=Teko&display=swap');
+
 
 .learn-more {
     font-family: Koulen;
@@ -187,21 +193,25 @@
     align-items: center;
     cursor: pointer;
     position: relative;
-    left: 18%;
+    left: 13%;
     transition: box-shadow .15s, transform .15s;
 }
+
 
 .learn-more:hover {
     transform: translateY(-5px);
 }
 
+
 .learn-more:active {
     transform: translateY(5px);
 }
 
+
 .learn-more, .activity-btn {
     display: inline-block;
 }
+
 
 @media only screen and (max-width: 800px){
     .center-if {
@@ -209,8 +219,21 @@
         overflow-x: visible;
     }
 
+
     .center-if > * {
         left: 0%;
         margin: auto;
     }
+}
+
+.dna-img {
+    position: absolute;
+}
+
+.dna-img > img {
+    width: 45%;
+    height: calc(45% / 2.24561403509);
+    position: relative;
+    left: calc(50% + 10px);
+    top: 30%;
 }
