--- a/CSS/activities.css
+++ b/CSS/activities.css
@@ -7,7 +7,7 @@
     -moz-box-shadow: 0px 1px 9px #000000;
     box-shadow: 0px 1px 9px #000000;
     font-family: Arial;
-    color: #f7f7f7;
+    color: #E7DECC;
     background: #202020;
     padding: 10px 20px 10px 20px;
     border: solid #000000 5px;
@@ -50,7 +50,7 @@
     -moz-box-shadow: 1px 1px 10px #000000;
     box-shadow: 1px 1px 10px #000000;
     font-family: Arial;
-    color: #ffffff;
+    color: #E7DECC;
     font-size: 20px;
     padding: 10px 20px 10px 20px;
     border: solid #000000 3px;
