--- a/CSS/activities.css
+++ b/CSS/activities.css
@@ -36,38 +36,30 @@
 }
 
 .activity-btn {
-    background: #00a6ff;
-    background-image: -webkit-linear-gradient(top, #00a6ff, #0068a8);
-    background-image: -moz-linear-gradient(top, #00a6ff, #0068a8);
-    background-image: -ms-linear-gradient(top, #00a6ff, #0068a8);
-    background-image: -o-linear-gradient(top, #00a6ff, #0068a8);
-    background-image: linear-gradient(to bottom, #00a6ff, #0068a8);
-    -webkit-border-radius: 11;
-    -moz-border-radius: 11;
-    border-radius: 11px;
-    text-shadow: 2px 2px 9px #000000;
-    -webkit-box-shadow: 1px 1px 10px #000000;
-    -moz-box-shadow: 1px 1px 10px #000000;
-    box-shadow: 1px 1px 10px #000000;
-    font-family: Arial;
+    font-family: sans-serif;
+    font-weight: 0;
+    font-size: 14px;
     color: #E7DECC;
-    font-size: 20px;
-    padding: 10px 20px 10px 20px;
-    border: solid #000000 3px;
+    background: linear-gradient(177deg, #42b7ff 0%, #0096c7 100%);
+    padding: 10px 30px;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    transition: 250ms;
+    transform: translateY(0);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    cursor: pointer;
+    position: relative;
     text-decoration: none;
-    width: 150px;
+    width: fit-content;
     height: 20px;
     margin: auto;
     transition: box-shadow .15s, transform .15s;
 }
   
 .activity-btn:hover {
-    background: #0068a8;
-    background-image: -webkit-linear-gradient(top, #0068a8, #00a6ff);
-    background-image: -moz-linear-gradient(top, #0068a8, #00a6ff);
-    background-image: -ms-linear-gradient(top, #0068a8, #00a6ff);
-    background-image: -o-linear-gradient(top, #0068a8, #00a6ff);
-    background-image: linear-gradient(to bottom, #0068a8, #00a6ff);
+    background: linear-gradient(177deg, #0096c7 0%, #42b7ff 100%);
     transform: translateY(-5px);
     text-decoration: none;
     cursor: pointer;
@@ -75,4 +67,54 @@
 
 .activity-btn:active {
     transform: translateY(5px);
+}
+
+.activity-container {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    text-align: center;
+}
+
+.activity-container > div {
+    background-color: #202020;
+    border: 5px solid #000000;
+    border-radius: 50px;
+    color: #E7DECC;
+    text-align: center;
+}
+
+.activity-explanation {
+    width: 35%;
+    height: auto;
+    padding: 30px;
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+    flex-direction: column;
+}
+
+.activity-img {
+    padding: 0;
+    overflow: hidden;
+    object-fit: cover;
+    top: 30px;
+}
+
+@media only screen and (max-width: 740px) {
+    .activity-container {
+        flex-direction: column;
+        padding: 30px;
+        align-items: center;
+    }
+
+    .activity-explanation, .activity-img {
+        width: 98%;
+    }
+
+    .activity-explanation {
+        padding: 0;
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
 }
