--- a/CSS/baby-maker.css
+++ b/CSS/baby-maker.css
@@ -6,13 +6,8 @@
 
 .randomPerson, .seePossibleBaby {
     appearance: none;
-    background: #0099ff;
-    background-image: -webkit-linear-gradient(top, #0099ff, #006fb0);
-    background-image: -moz-linear-gradient(top, #0099ff, #006fb0);
-    background-image: -ms-linear-gradient(top, #0099ff, #006fb0);
-    background-image: -o-linear-gradient(top, #0099ff, #006fb0);
-    background-image: linear-gradient(to bottom, #0099ff, #006fb0);
-    border: 3px solid black;
+    background: linear-gradient(177deg, #42b7FF 0%, #0096C7 100%);
+    border: none;
     border-radius: 6px;
     box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
     box-sizing: border-box;
@@ -36,12 +31,7 @@
 }
 
 .randomPerson:hover, .seePossibleBaby:hover {
-    background: #006fb0;
-    background-image: -webkit-linear-gradient(top, #006fb0, #0099ff);
-    background-image: -moz-linear-gradient(top, #006fb0, #0099ff);
-    background-image: -ms-linear-gradient(top, #006fb0, #0099ff);
-    background-image: -o-linear-gradient(top, #006fb0, #0099ff);
-    background-image: linear-gradient(to bottom, #006fb0, #0099ff);
+    background: linear-gradient(177deg, #0096C7 0%, #42b7FF 100%);
     cursor: pointer;
     transform: translateY(-5px);
 }
@@ -68,13 +58,8 @@
 
 .finalizeCreate, .neverMind, .ok-baby {
     appearance: none;
-    background: #0099ff;
-    background-image: -webkit-linear-gradient(top, #0099ff, #006fb0);
-    background-image: -moz-linear-gradient(top, #0099ff, #006fb0);
-    background-image: -ms-linear-gradient(top, #0099ff, #006fb0);
-    background-image: -o-linear-gradient(top, #0099ff, #006fb0);
-    background-image: linear-gradient(to bottom, #0099ff, #006fb0);
-    border: 3px solid black;
+    background: linear-gradient(177deg, #42b7FF 0%, #0096C7 100%);
+    border: none;
     border-radius: 6px;
     box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
     box-sizing: border-box;
@@ -99,12 +84,7 @@
 }
 
 .finalizeCreate:hover, .neverMind:hover, .ok-baby:hover {
-    background: #006fb0;
-    background-image: -webkit-linear-gradient(top, #006fb0, #0099ff);
-    background-image: -moz-linear-gradient(top, #006fb0, #0099ff);
-    background-image: -ms-linear-gradient(top, #006fb0, #0099ff);
-    background-image: -o-linear-gradient(top, #006fb0, #0099ff);
-    background-image: linear-gradient(to bottom, #006fb0, #0099ff);
+    background: linear-gradient(177deg, #0096C7 0%, #42b7FF 100%);
     cursor: pointer;
     transform: translateY(-5px);
 }
