--- a/CSS/main-navbar.css
+++ b/CSS/main-navbar.css
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
-} 
+}
+
 
 .navbar {
     list-style-type: none;
@@ -11,22 +12,31 @@
     overflow: hidden;
     background-color: rgb(11, 11, 11);
     border-bottom: 2px solid #242426;
+    height: 43px;
+    width: 100%;
+    position: fixed;
+    z-index: 10;
 }
+
 
 .nav-item-left {
     float: left;
 }
 
+
 .nav-item-right {
     float: right;
 }
+
 
 .nav-item-left:hover, .nav-item-right:hover {
     background-color: #242426;
     -webkit-transition: background-color 200ms linear;
     -ms-transition: background-color 200ms linear;
     transition: background-color 200ms linear;
+    border: none;
 }
+
 
 .nav-title {
     font-family: sans-serif;
@@ -39,6 +49,7 @@
     text-transform: none;
 }
 
+
 .nav-text {
     font-family: Georgia, serif;
     font-size: 15px;
@@ -48,6 +59,7 @@
     text-transform: none;
 }
 
+
 .nav-item-left a, .nav-item-right a {
     display: block;
     color: #E7DECC;
@@ -56,6 +68,10 @@
     text-decoration: none;
 }
 
+
 body {
     background-color: rgb(17, 17, 17);
 }
+
+
+
