--- a/CSS/atom-creator.css
+++ b/CSS/atom-creator.css
@@ -138,3 +138,35 @@
     overflow-wrap: break-word;
     word-wrap: break-word;
 }
+
+.transition-btn {
+    font-family: sans-serif;
+    font-weight: 0;
+    font-size: 14px;
+    color: #E7DECC;
+    background: linear-gradient(177deg, #42b7ff 0%, #0096c7 100%);
+    padding: 10px 30px;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    transition: 250ms;
+    transform: translateY(0);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    cursor: pointer;
+    position: relative;
+    text-decoration: none;
+    margin: auto;
+}
+ 
+.transition-btn:hover {
+    background: linear-gradient(177deg, #0096c7 0%, #42b7ff 100%);
+    transform: translateY(-5px);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+.transition-btn:active {
+    transform: translateY(5px);
+}
