--- a/CSS/main-navbar.css
+++ b/CSS/main-navbar.css
@@ -4,7 +4,6 @@
     scroll-behavior: smooth;
 }
 
-
 .navbar {
     list-style-type: none;
     margin: 0;
@@ -18,16 +17,13 @@
     z-index: 10;
 }
 
-
 .nav-item-left {
     float: left;
 }
 
-
 .nav-item-right {
     float: right;
 }
-
 
 .nav-item-left:hover, .nav-item-right:hover {
     background-color: #242426;
@@ -73,5 +69,68 @@ body {
     background-color: rgb(17, 17, 17);
 }
 
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 30px;
+    height: 17px;
+    margin: auto;
+    top: 50%;
+    left: 10px;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    text-align: center;
+}
 
+.switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 13px;
+    width: 13px;
+    left: 2px;
+    bottom: 2px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background: linear-gradient(177deg, #42b7ff 0%, #0096c7 100%);
+}
+  
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+  
+input:checked + .slider:before {
+    -webkit-transform: translateX(13px);
+    -ms-transform: translateX(13px);
+    transform: translateX(13px);
+}
+  
+.slider.round {
+    border-radius: 34px;
+}
+  
+.slider.round:before {
+    border-radius: 50%;
+}
 
