--- a/CSS/home.css
+++ b/CSS/home.css
@@ -148,20 +148,7 @@
     transition: opacity .5s ease-in-out;
 }
 
-.activities-btn-left {
-    position: relative;
-    height: 100px;
-    border: none;
-    color: #E7DECC;
-    cursor: pointer;
-    font-size: x-large;
-    flex-grow: 1;
-    padding: 10px;
-    width: 50px;
-    max-width: 50px;
-}
-
-.activities-btn-right {
+.activities-btn {
     position: relative;
     height: 100px;
     border: none;
